Adição de custom alertdialog para saída dos estágios. O layout utilizado foi baseado no nativo Android, mas com as cores mais próximas do jogo, assim como botões próprios. =)